examples/test/testpolicy4885.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4885
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key47: value39
      key25: value3
      key26: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value24
          key11: value41
          key16: value12
      podSelector:
        matchLabels:
          key32: value31
